[tool.poetry]
name = "brain-games"
version = "0.1.0"
description = ""
authors = ["e.panin <fath34d@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
